refactor: Refatorando códigos js

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </section>
     <script src="./js/calcula-imc.js"></script>
     <script src="./js/valida-campo-imc.js"></script>
-    <script src="./js/botão-novo-paciente.js"></script>
+    <script src="./js/botao-novo-paciente.js"></script>
     <script src="./js/insere-linha-paciente.js"></script>
     <script src="./js/cria-objeto-paciente.js"></script>
   </body>
