feat: Adicionado remoção de pacientes em js.

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <!-- ... -->
     <section class="container">
       <h2 id="titulo-form">Adicionar novo paciente</h2>
+      <ul id="mensagens-erro"></ul>
       <form id="form-adiciona">
         <div class="grupo">
           <label for="nome">Nome:</label>
@@ -123,5 +124,6 @@
     <script src="./js/botao-novo-paciente.js"></script>
     <script src="./js/insere-linha-paciente.js"></script>
     <script src="./js/cria-objeto-paciente.js"></script>
+    <script src="./js/remover-paciente.js"></script>
   </body>
 </html>
