--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     <main>
       <section class="container">
         <h2>Meus pacientes</h2>
+        <label for="filtrar-tabela">Filtre:</label>
+        <input
+          type="text"
+          name="filtro"
+          id="filtrar-tabela"
+          placeholder="Digite o nome do paciente"
+        />
         <table>
           <thead>
             <tr>
@@ -125,5 +132,6 @@
     <script src="./js/insere-linha-paciente.js"></script>
     <script src="./js/cria-objeto-paciente.js"></script>
     <script src="./js/remover-paciente.js"></script>
+    <script src="./js/filtro-pacientes.js"></script>
   </body>
 </html>
