--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
             </tr>
           </tbody>
         </table>
+        <button id="buscar-pacientes" class="botao bto-principal">
+          Buscar Paciente
+        </button>
       </section>
     </main>
     <!-- ... -->
@@ -133,5 +136,6 @@
     <script src="./js/cria-objeto-paciente.js"></script>
     <script src="./js/remover-paciente.js"></script>
     <script src="./js/filtro-pacientes.js"></script>
+    <script src="./js/buscar-pacientes.js"></script>
   </body>
 </html>
